--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,19 +36,16 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "org.jetbrains.anko:anko:$anko_version"
     // Anko Commons
-//    implementation "org.jetbrains.anko:anko-commons:$anko_version"
-
+    //    implementation "org.jetbrains.anko:anko-commons:$anko_version"
     // Anko Layouts
-//    implementation "org.jetbrains.anko:anko-sdk25:$anko_version" // sdk15, sdk19, sdk21, sdk23 are also available
-//    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
-
+    //    implementation "org.jetbrains.anko:anko-sdk25:$anko_version" // sdk15, sdk19, sdk21, sdk23 are also available
+    //    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     // Coroutine listeners for Anko Layouts
-//    implementation "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
-//    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
-
+    //    implementation "org.jetbrains.anko:anko-sdk25-coroutines:$anko_version"
+    //    implementation "org.jetbrains.anko:anko-appcompat-v7-coroutines:$anko_version"
     // Anko SQLite
-//    implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
-//    compile 'com.android.support:multidex:1.0.1'
+    //    implementation "org.jetbrains.anko:anko-sqlite:$anko_version"
+    //    compile 'com.android.support:multidex:1.0.1'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation "com.android.support:design:$support_version"
@@ -57,10 +54,12 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'com.jakewharton:butterknife:8.8.1'
     implementation "com.android.support:support-annotations:$support_version"
-    implementation "io.reactivex.rxjava2:rxkotlin:2.3.0"
+    implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     kapt 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.facebook.rebound:rebound:0.3.8'
+    implementation 'com.tumblr:backboard:0.1.0'
 }
 
 
